.provarCaches/00D410000011HE0EAM/objects/rstk__txnobjs__c.object
<CustomObject>
    <description>txnobjs__c</description>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>This is an internal system field which is not currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>Trigger Options</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__txnobjs_div__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Division Master</label>
        <referenceTo>rstk__sydiv__c</referenceTo>
        <relationshipLabel>Txn Objects</relationshipLabel>
        <relationshipName>txnobjss</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__txnobjs_error__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Status - Error</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__txnobjs_message__c</fullName>
        <label>Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>rstk__txnobjs_obj10name__c</fullName>
        <label>Object10 Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__txnobjs_obj10s__c</fullName>
        <label>Object10s</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>rstk__txnobjs_obj1name__c</fullName>
        <label>Object1 Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__txnobjs_obj1s__c</fullName>
        <label>Object1s</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>rstk__txnobjs_obj2name__c</fullName>
        <label>Object2 Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__txnobjs_obj2s__c</fullName>
        <label>Object2s</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>rstk__txnobjs_processed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Status - Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__txnobjs_success__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Status - Success</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__txnobjs_txntype__c</fullName>
        <label>Txn Type</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Txn Objects</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Txn Objects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>